1999-01-06  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/events.c (GetContext): fixed fixed fix for fix (made
	MouseFocusClickRaises work again).

	* fvwm/fvwm2.1: corrected the manpage on '@foo.xpm@' for AddToMenu.

	* fvwm/**: Applied updated signal handler patch by Chris Rankin

	* fvwm/events.c (GetContext): fixed button bindings on client portion
	of window.

	* archive/ChangeLog: File added to have a ChangeLog for the files that
	are not distributed.

1998-01-05  Bob Woodside  <proteus@pcnet.com>

	* fvwm/misc.c (RaiseWindow):  Added Matthias Clasen's patch to keep
	from raising StaysOnTop windows above override_redirect windows; fixed
	the stacking order chain reorg to keep StaysOnTop windows at the
	beginning of the chain.

1998-01-05  Dominik Vogt  <dominik_vogt@hp.com>

	* BUGS: Removed some fixed bugs.

1999-01-05  Paul D. Smith  <psmith@gnu.org>

	* NEWS: Updated with new configure options.

	* acinclude.m4 (smr_CHECK_LIB): A few tweaks: don't print out
	extra lines; make sure $with_xxx is set properly.

	* configure.in: Added output section to the end, mainly to make a
	missing XPM lib more obvious.
	Added a new XPM check grabbed from XEmacs, which verifies we have
	a "new enough" version of XPM.
	Add a new check for the type of arguments to select(); whether we
	like fd_set* or require int*.
	Allow the user to specify a location for cpp with --with-cpp.
	If cpp can't be found, stop immediately.

	* fvwm/events.c (My_XNextEvent): Replace __hpux check with select
	arg check from configure.

	* BUGS: Documented install-strip problem.

1998-01-05  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: Changed version to 2.1.8.
	* NEWS: Ditto.

	* Released fvwm 2.1.7 beta (CVS tag version-2_1_7).

1999-01-04  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (FPopupMenu): force menus on screen if making them non
	overlapping moves them partially off screen.

1999-01-03  Dominik Vogt  <dominik_vogt@hp.com>
